[package]
name = "mobc-lapin"
version = "0.7.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
license = "MIT/Apache-2.0"
description = "RabbitMQ support for the async mobc connection pool"
repository = "https://github.com/zupzup/mobc-lapin/tree/master"
edition = "2018"
readme = "README.md"
keywords = ["rabbitmq", "pool", "queue", "async", "lapin"]

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*",
]

[dependencies]
mobc = "0.7"
lapin = "1.6"

[dev-dependencies]
tokio = { version = "1.1", features = ["rt-multi-thread", "macros", "time"] }
tokio-amqp = "1.0"
futures = { version = "0.3", default-features = false }
